--- a/recommender.cabal
+++ b/recommender.cabal
@@ -18,6 +18,6 @@ cabal-version:       >=1.10
 executable recommender
   main-is:             Main.hs	
   other-modules:       Utils, Bias, UserBased, MatrixFactorization
-  build-depends:       base, cassava, vector, bytestring, matrix, containers, multimap, split, csv, sgd
+  build-depends:       base, cassava, vector, bytestring, matrix, containers, multimap, split, csv, sgd, random
   hs-source-dirs:      src
   default-language:    Haskell2010
