--- a/recommender.cabal
+++ b/recommender.cabal
@@ -5,7 +5,7 @@ name:                recommender
 version:             0.1.0.0
 synopsis:            implicit collaborative filtering
 -- description:         
-homepage:            http://www.github.com/cem3394/recommender
+homepage:            http://www.github.com/cem3394/implicit-cf
 license:             MIT
 license-file:        LICENSE
 author:              chris
@@ -17,7 +17,7 @@ cabal-version:       >=1.10
 
 executable recommender
   main-is:             Main.hs	
-  other-modules:       Utils, Bias, KNearestNeighbors, MatrixFactorization
+  other-modules:       Bias, KNearestNeighbors, MatrixFactorization, Types
   build-depends:       base, cassava, vector, bytestring, matrix, containers, multimap, split, csv, sgd, random
   hs-source-dirs:      src
   default-language:    Haskell2010
